--- a/todoApp/src/app/app.component.html
+++ b/todoApp/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-5">
       <h3 class="bg-primary text-white p-3">
-        {{user}} To Do List
+        {{getName()}} To Do List
       </h3>
       <div class="input-group">
         <input type="text" class="form-control">
@@ -15,14 +15,23 @@
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
+            <th></th>
             <th>Açıklama</th>
             <th>Aksiyon</th>
           </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of items">
+            <tr *ngFor="let item of getItems(); let i= index">
+              <td>{{ i + 1 }}</td>
               <td>{{item.aciklama}}</td>
-              <td>{{item.aksiyon}}</td>
+              <td [ngSwitch]="item.aksiyon">
+              <span *ngSwitchCase="true">
+                Yes
+              </span>
+              <span *ngSwitchCase="false">
+                No
+              </span>
+            </td>
             </tr>
         </tbody>
       </table>     
