--- a/todoApp/src/app/app.component.html
+++ b/todoApp/src/app/app.component.html
@@ -24,6 +24,9 @@
             <tr *ngFor="let item of getItems(); let i= index">
               <td>{{ i + 1 }}</td>
               <td>{{item.aciklama}}</td>
+              <td>
+                <input type="checkbox" [(ngModel)]="item.aksiyon">
+              </td>
               <td [ngSwitch]="item.aksiyon">
               <span *ngSwitchCase="true">
                 Yes
