--- a/todoApp/src/app/app.component.html
+++ b/todoApp/src/app/app.component.html
@@ -12,6 +12,10 @@
           </button>
         </div>
       </div>  
+      <div class="custom-control custom-checkbox my-3">
+        <input type="checkbox" [(ngModel)]="isDisplay" class="custom-control-input" name="" id="displayAll">
+        <label class="custom-control-label"  for="displayAll">Hepsini Göster</label>
+      </div>
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
