--- a/movieApp/src/app/app.component.html
+++ b/movieApp/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>Movies App</h1>
-<movies></movies>
-<div class="alert alert-success">
-    Başarılı
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-5 mt-5">
+            <movies></movies>
+        </div>
+    </div>
 </div>
