--- a/movieApp/src/app/movies/movies.component.html
+++ b/movieApp/src/app/movies/movies.component.html
@@ -1,11 +1,13 @@
-<div class="card">
+<movie-detail [movie]   ="selectedMovie"></movie-detail>
+    
     <div class="card-header">
         {{ title }}
     </div>
     <ul class="list-group list-group-flush">
-        <li *ngFor="let movie of movies" class="list-group-item">
+        <li *ngFor="let movie of movies" (click)="onSelect(movie)" 
+        class="list-group-item"
+        [class.active]="movie===selectedMovie">
             <span class="badge badge-primary">{{ movie.id }}</span>{{movie.name}}
             <span class="close">x</span>
         </li>
     </ul>
-</div>
